[tool.poetry]
name = "uHTTP"
version = "1.2.1"
description = "Pythonic web development"
authors = ["gus <0x67757300@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/0x67757300/uHTTP"
keywords = ["asgi", "web", "http"]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
