[tool.poetry]
name = "uHTTP"
version = "1.3.3"
description = "Stupid web development"
authors = ["gus <0x67757300@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/0x67757300/uHTTP"
documentation = "https://0x67757300.github.io/uHTTP/uhttp.html"
keywords = ["asgi", "web", "http"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = ["tests.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
